plugins {
	id 'java'
	id 'org.springframework.boot' version '2.4.5'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
}

group = 'com.glinboy'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = 16
targetCompatibility = 16

repositories {
	mavenCentral()
}

ext {
	jsr310Version = '2.12.2'
	springdocVersion = '1.5.7'
	problemVersion = '0.26.2'
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation('org.springframework.boot:spring-boot-starter-web') {
		exclude module: 'spring-boot-starter-tomcat'
	}
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	implementation "org.springframework.boot:spring-boot-starter-undertow"
	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'io.jsonwebtoken:jjwt:0.9.1'
	implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jsr310Version}"
	implementation "org.springdoc:springdoc-openapi-ui:${springdocVersion}"
	compileOnly "org.projectlombok:lombok"
	annotationProcessor "org.projectlombok:lombok"
	
	implementation "org.zalando:problem-spring-web:${problemVersion}"
}

bootRun {
	jvmArgs = ['-XX:+UseZGC',
				'-Xlog:gc*:file=log/linkshorter.gc.log',
				'-XX:+HeapDumpOnOutOfMemoryError',
				'-XX:HeapDumpPath=log/crashes/linkshorter.hprof',
				'-Xss256k',
				'-Dsun.net.client.defaultConnectTimeout=2000',
				'-Dsun.net.client.defaultReadTimeout=2000'
			]
}

test {
	useJUnitPlatform()
}
